--- a/_sass/_posts_grid.scss
+++ b/_sass/_posts_grid.scss
@@ -63,5 +63,6 @@
 
   .posts-grid-item {
     flex-direction: column;
+    gap: 0;
   }
 }
